--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">RKNN YOLO Demo</string>
-    <string name="app_title">RKNN YOLO Demo</string>
+    <string name="app_name">wasu YOLO Demo</string>
+    <!--string name="app_title">RKNN YOLO Demo</string-->
+    <string name="app_title">华数AI检测应用</string>
     <string name="powered_by_rockchip">Powered by Rockchip GPADC.</string>
-    <string name="title_activity_start">RKNN YOLO Demo</string>
+    <string name="title_activity_start">wasu AI</string>
     <string name="buttonCamera">YOLO Camera Demo</string>
     <string name="buttonImage">YOLO Image Demo</string>
 </resources>
